Build container image of CLARA with a minified JRE via Gradle.